--- a/index.html
+++ b/index.html
@@ -2,12 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">    
     <link rel = "stylesheet" type = "text/css" href = "style.css">
-    <script src = "index.js"></script>
     <title>Welcome to MadLibs!</title>
 </head>
 <body>
+    <header id = "main-header">
+        <h1>Welcome to Nandy's MadLibs Generator!</h1>
+    </header>
+    <section id = "main-content">
+        <div class="container">
+            <div class = "jumbotron">
+                <form id="main-form">
+                    <input type = "text" class = "form-control" id = "input-person" placeholder="Person">
+                    <input type = "text" class = "form-control" id = "input-adj" placeholder="Adjective">
+                    <input type = "text" class = "form-control" id = "input-verb" placeholder="Verb">
+                    <input type = "text" class = "form-control" id = "input-plural-pronoun" placeholder="Plural Pronoun">
+                    <input type = "text" class = "form-control" id = "input-plural-verb" placeholder="Plural verb">
+
+                </form>
+                <br>
+                <button id = "submit-button" >Submit</button>
+                <br>
+                <textarea id = "output" placeholder = "Story will appear here"></textarea>
+                <br>
+                <button id = "reset-button">Reset</button>
+            </div>
+        </div>
+    </section>
+    <footer id="main-footer">
+        <p>Copyright &copy; 2020, Nandy Inc.</p>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src = "index.js"></script>
 </body>
 </html>
