made the page a little more responsive and beautiful.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <h1>Welcome to Nandy's MadLibs Generator!</h1>
     </header>
     <section id = "main-content">
-        <div class="container">
-            <div class = "jumbotron">
+        <div class="container-fluid">
+            <div class = "jumbotron-fluid">
                 <form id="main-form">
                     <input type = "text" class = "form-control" id = "input-person" placeholder="Person">
                     <input type = "text" class = "form-control" id = "input-adj" placeholder="Adjective">
@@ -29,12 +29,14 @@
                 <textarea id = "output" placeholder = "Story will appear here"></textarea>
                 <br>
                 <button id = "reset-button">Reset</button>
+                <br>
+                <footer id="main-footer">
+                    <p>Copyright &copy; 2020, Nandy</p>
+                </footer>
             </div>
         </div>
     </section>
-    <footer id="main-footer">
-        <p>Copyright &copy; 2020, Nandy Inc.</p>
-    </footer>
+
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
